# ast5011-project

./: .gitignore  README.md  cdm.ipynb  extract_stream.ipynb  other_streams.ipynb  phlegethon.ipynb  pyproject.toml  query.py  stream_perturbing_halos.ipynb  stream_perturbing_halos.py  streams.py  sylgr.ipynb  wdm_fs_suppress.ipynb  wdm_halo_lineage.ipynb  wdm_halo_merge.ipynb  wdm_sph.ipynb
illustris_data/: mw_halos.json  sublink_mpb_0.hdf5
isochrones/: GD-1.csv  Gjöll.csv  Pal5.csv  Palomar 5.csv  Phlegethon.csv  Sylgr.csv
reports_and_presentations/: PRESENTATION.md
reports_and_presentations/paper/: bib.bib  paper.bbl  paper.tex
stream_candidates/: GD-1_candidates.csv  Phlegethon_candidates.csv
streamfinder/: streamfinder_stars.csv  streamfinder_streamid.csv
